--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Recipes</h1>
     <ul>
         <li><a href="./recipes/butterchicken.html">Butter chicken</a></li>
+        <li><a href="./recipes/skilletchickenbulgogi.html">Skillet chicken bulgogi</a></li>
     </ul>
 </body>
 </html>
