Added ingredients and steps on bulgogi page

--- a/recipes/skilletchickenbulgogi.html
+++ b/recipes/skilletchickenbulgogi.html
@@ -12,5 +12,22 @@
     <h3>Description</h3>
     <p>This is a quick recipe to make chicken bulgogi</p>
     <p>This dish a staple of Korean cuisine and is a must have for your next meal</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>¼ cup chopped onion</li>
+        <li>5 tablespoons soy sauce</li>
+        <li>2½ tablespoons brown sugar</li>
+        <li>2 tablespoons minced garlic</li>
+        <li>2 tablespoons sesame oil</li>
+        <li>1 tablespoon sesame seeds</li>
+        <li>½ teaspoon cayenne</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>1 pound skinless, boneless chicken breasts, cut into thin strips</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Whisk onion, soy sauce, brown sugar, garlic, sesame oil, sesame seeds, cayenne pepper, salt, and black pepper together in a bowl until marinade is smooth.</li>
+        <li>Cook and stir chicken and marinade together in a large skillet over medium-high heat until chicken is cooked through, about 15 minutes.</li>
+    </ol>
 </body>
 </html>
