--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./recipes/butterchicken.html">Butter chicken</a></li>
         <li><a href="./recipes/skilletchickenbulgogi.html">Skillet chicken bulgogi</a></li>
+        <li><a href="./recipes/rajma.html">Rajma</a></li>
     </ul>
 </body>
 </html>
